--- a/stylesheets/scss/_mixins.scss
+++ b/stylesheets/scss/_mixins.scss
@@ -5,12 +5,14 @@
 @mixin hyphenate($boolean) {
   @if $boolean == true {
     word-break: break-word;
+    word-wrap: break-word;
     -webkit-hyphens: auto;
     -moz-hyphens: auto;
     -ms-hyphens: auto;
     hyphens: auto;
   } @else {
     word-break: normal;
+    word-wrap: normal;
     -webkit-hyphens: none;
     -moz-hyphens: none;
     -ms-hyphens: none;
